docket - exchange fileassociations for Desktop, add file history